// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-1"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-1"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            Dictionary
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        Dictionary
      </h2>
    </header>
    <div
      class="Dictionary-search"
    >
      <form
        class=""
      >
        <div
          class="form-group row"
        >
          <label
            class="form-label col-form-label col-sm-2"
            for="query"
          >
            Query
          </label>
          <div
            class="col-sm-6"
          >
            <input
              class="form-control"
              id="query"
              placeholder="lemma or meaning"
              type="text"
              value="lem[ma?]"
            />
          </div>
          <div
            class="col-sm-4"
          >
            <button
              class="btn btn-primary"
              type="submit"
            >
              Query
            </button>
          </div>
        </div>
      </form>
    </div>
    <ul
      class="WordSearch-results"
    >
      <li
        class="WordSearch-results__result"
      >
        <div
          class="Word"
        >
          <a
            class="BibliographySearch__edit"
            href="/dictionary/test I/edit"
          >
            <i
              class="fas fa-edit"
            />
          </a>
          <dfn
            title="test I"
          >
            <strong>
              <a
                href="/dictionary/test I"
              >
                
                test
              </a>
            </strong>
             I
          </dfn>
          <ul
            class="Word__forms"
          >
            <li
              class="Word__form"
            >
              <span
                class="Notes-note"
              >
                dsdsds
                 
              </span>
              <em />
            </li>
            <li
              class="Word__form"
            >
              <span
                class="Notes-note"
              >
                <strong>
                  BOLD
                </strong>
                 
              </span>
              <em>
                abā'um
              </em>
            </li>
          </ul>
           
          ~
           "to weed" O/jB
           
          <ul>
            <li>
              <strong>
                G
              </strong>
               
              (
              <em>
                i/i
              </em>
              ) field
               
              <ul>
                <li
                  class="AmplifiedMeanings__entry"
                >
                  <strong>
                    1.
                  </strong>
                   
                  mmkkk
                </li>
              </ul>
            </li>
          </ul>
           
          <ul>
            <li>
              <ul
                class="Derived__group"
              >
                <li
                  class="Derived__entry"
                >
                  <em>
                    wabûtu
                  </em>
                   I
                </li>
              </ul>
            </li>
          </ul>
           
          <span
            class="Word__derivedFrom"
          >
            <em>
              sadasd
            </em>
            
          </span>
        </div>
      </li>
    </ul>
  </section>
</div>
`;

exports[`Snapshot 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-1"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-1"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            Dictionary
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        Dictionary
      </h2>
    </header>
    <div
      class="Dictionary-search"
    >
      <form
        class=""
      >
        <div
          class="form-group row"
        >
          <label
            class="form-label col-form-label col-sm-2"
            for="query"
          >
            Query
          </label>
          <div
            class="col-sm-6"
          >
            <input
              class="form-control"
              id="query"
              placeholder="lemma or meaning"
              type="text"
              value=""
            />
          </div>
          <div
            class="col-sm-4"
          >
            <button
              class="btn btn-primary"
              type="submit"
            >
              Query
            </button>
          </div>
        </div>
      </form>
    </div>
    <ul
      class="WordSearch-results"
    />
  </section>
</div>
`;
